Optimize checkTemplates() and fetch() methods
- Don't attempt to fetch() if no tpl is specified
- Use modParser::getElement() instead of modX::getObject() to get a Chunk
- Remove unnecessary get_file_contents() method

--- a/core/components/wayfinder/docs/changelog.txt
+++ b/core/components/wayfinder/docs/changelog.txt
@@ -1,5 +1,6 @@
 Changelog for Wayfinder (for Revolution).
 
+- Optimize checkTemplates() and fetch() methods
 - [#56] Use link_tag_scheme if fullLink and scheme not set
 - [#51] Avoid fatal error when Resource is not set
 
